kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: vedant-todo

  labels:
    app: vedant-todo
    environment: test
