kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: vedant-todo
  labels:
    app: todo-backend
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: todo-backend

  template:
    metadata:
      labels:
        app: todo-backend

    spec:

      # Backend runs only on backend node group
      nodeSelector:
        workload: backend

      terminationGracePeriodSeconds: 30

      containers:
        - name: backend
          image: YOUR_AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/vedant-todo-backend:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 5000
              protocol: TCP

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "1000m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
