kubernetes/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: todo-backend
  namespace: vedant-todo

  labels:
    app: todo-backend

  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP

spec:
  type: ClusterIP

  selector:
    app: todo-backend

  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
