kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: todo-frontend
  namespace: vedant-todo

  labels:
    app: todo-frontend

  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP

spec:
  type: ClusterIP

  selector:
    app: todo-frontend

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
